# league-api

./: Cargo.toml  LICENSE
src/: account.rs  league.rs  lib.rs  lol_match.rs  summoner.rs
src/player/: account.rs  mod.rs  summoner.rs
src/queue/: mod.rs  queue_type.rs  ranked.rs
src/ranked/: division.rs  mod.rs  tier.rs
src/region/: routing.rs  server.rs
