[package]
name = "league-api"
version = "0.3.5"
edition = "2021"
authors = ["Portablefire22 <lilith@kitten.rs>"]
description = "A library for interfacing with the Riot development API."

[dependencies]
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0.0"
log = "0.4"
